Uploaded image for project: 'Apache Arrow'
  1. Apache Arrow
  2. ARROW-5851

[C++] Compilation of reference benchmarks fails

    XMLWordPrintableJSON

Details

    Description

      ../src/arrow/util/compression-benchmark.cc: In function 'void arrow::util::StreamingDecompression(arrow::Compression::type, const std::vector<unsigned char>&, benchmark::State&)':
      ../src/arrow/util/compression-benchmark.cc:172:5: error: 'ARROW_CHECK' was not declared in this scope
           ARROW_CHECK(decompressed_size == static_cast<int64_t>(data.size()));
           ^~~~~~~~~~~
      ../src/arrow/util/compression-benchmark.cc:172:5: note: suggested alternative: 'ARROW_CONCAT'
           ARROW_CHECK(decompressed_size == static_cast<int64_t>(data.size()));
           ^~~~~~~~~~~
           ARROW_CONCAT
      

      Attachments

        Issue Links

          Activity

            People

              apitrou Antoine Pitrou
              apitrou Antoine Pitrou
              Votes:
              0 Vote for this issue
              Watchers:
              3 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - Not Specified
                  Not Specified
                  Remaining:
                  Remaining Estimate - 0h
                  0h
                  Logged:
                  Time Spent - 40m
                  40m