ARROW-5851: [C++] Fix compilation of reference benchmarks

Also fix a warning because of static variables in headers.

Author: Antoine Pitrou <antoine@python.org>

Closes #4808 from pitrou/ARROW-5851-compile-reference-benchmarks and squashes the following commits:

fb6740aea <Antoine Pitrou> ARROW-5851:  Fix compilation of reference benchmarks